Modificaciones e inclusiones de reportes faltantes.
